Fixed quiz button and localnav on mobile

--- a/Django_Files/home/static/base.css
+++ b/Django_Files/home/static/base.css
@@ -390,6 +390,10 @@ button, input[type="submit"] {
 }
 
 @media (max-width: 768px) {
+    #local-nav {
+        width: 100%;
+    }
+
     .lesson {
         padding: 0 .5rem;
     }
